# FinInfo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml  readme.md  test_main.py
alembic/: env.py
alembic/versions/: 1586f1e7e55f_.py
app/: conf.ini  database.py  gunicorn.conf.py  main.py  models.py  utils.py
app/base/: aws.py
app/config/: __init__.py  base.py  karza.py  orck.py  protean.py  ramp.py  turing.py  vault.py  vkyc.py
app/db/: DynamoDB.py
app/internal/: ApiCommons.py  karza.py  orck.py  protean.py  ramp.py  session.py  steps.py  turing.py  vault.py  vkyc.py
app/internal/certificate/: certificate.pfx  selfsigned.key
app/repository/: pan.py  session.py
app/routers/: bank_accounts.py  eaadhaar.py  health.py  other_details.py  pan.py  session.py  vkyc.py
app/schemas/: aadhaar.py  bank.py  common.py  customer_onboarding.py  orck.py  other_details.py  pan.py  ramp.py  token.py  turing.py  vault.py  vkyc.py
dynamodb_export_tables/: samplemodel.json
request_payloads/: risk_calculation.json  screening.json  send_link.json
test_client/: api.py  gunicorn.conf.py
test_client/test_payloads/: create_token.json  generate_token.json  get_customer_details.json  get_customer_id_by_aadhar.json  get_details.json  get_pick_list.json  screening.json  send_link.json
test_payloads/: get_customer_details.json  get_customer_id_by_aadhar.json  get_details.json  get_pick_list.json  onboard_customer.json  risk_calculation.json  screening.json  signed_payload.json
