[tool.poetry]
name = "unity"
version = "0.1.0"
description = ""
authors = ["Atul Parmar <atul.parmar@tarrakki.com>"]
license = "Tarrakki Proprietory"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
aiohttp = "^3.9.3"
jwt = "^1.3.1"
boto3 = "^1.34.49"
pydantic-settings = "^2.2.1"
cryptography = "^42.0.5"
requests = "^2.31.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"
bandit = "^1.7.7"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
